@@ -1,11 +1,11 @@
 {
   "count": 53,
-  "uniques": 14,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
