@@ -1,3 +1,10 @@
+2022-06-28T16:06:38Z:
+* notice: last 14d: unq all: 13 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 439 1589 / 467 1642
+* notice: next accum: outdated-unq outdated-all / unq all: 439 1589 / 466 1642
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-14 2022-06-28]
+
 2022-06-28T08:07:54Z:
 * notice: last 14d: unq all: 14 53
 * notice: prev accum: outdated-unq outdated-all / unq all: 439 1589 / 466 1642
